--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter_username: FitzMuseum_UK
 github_username:  fitzwilliammuseum
 background: "/images/libraries/JWC01.jpeg"
 main_url: 'https://fitzmuseum.cam.ac.uk'
-google_analytics: 'G-2R0YLY9DRS'
+#google_analytics: 'G-2R0YLY9DRS'
 # Build settings
 plugins:
   - jekyll-feed
